GNOME Bugzilla – Bug 660124
editing of local accounts fails
Last modified: 2011-09-26 14:02:19 UTC
I have created an account of the type 'people nearby'. Now I want to change some details of this account and clicked on the Edit icon besides the account name. This opens the initial account setup dialog again. If I then click on 'just setup a nearby account' once again, the dialog closes and nothing else happens. No chance to edit details.
Created attachment 197476 [details] [review] always display the accounts dialog if we have to show a specific account
Merged to master; I'm going to merge it to 3.2 as well. Attachment 197476 [details] pushed as b94efc7 - always display the accounts dialog if we have to show a specific account