always display the accounts dialog if we have to show a specific account

https://bugzilla.gnome.org/show_bug.cgi?id=660124